--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: GGPA
 Type: Package
 Title: graph-GPA: A graphical model for prioritizing GWAS results and investigating pleiotropic architecture
-Version: 0.9.6
-Date: 2018-01-15
-Author: Dongjun Chung, Hang J. Kim
-Maintainer: Dongjun Chung <dongjun.chung@gmail.com>, Hang J. Kim <hang.kim@uc.edu>
+Version: 0.99.0
+Date: 2020-02-25
+Author: Dongjun Chung, Hang J. Kim, Carter Allen
+Maintainer: Dongjun Chung <dongjun.chung@gmail.com>
 Description: This package provides functions for fitting graph-GPA, a statistical framework to prioritize GWAS results by integrating pleiotropy. 
 License: GPL (>= 2)
 URL: https://github.com/dongjunchung/GGPA/
-Depends: methods, graphics, GGally
+Depends: R (>= 4.0.0), methods, graphics, GGally, network, sna, scales
 Imports: Rcpp (>= 0.11.3)
 LinkingTo: Rcpp, RcppArmadillo
 RcppModules: cGGPAmodule
 NeedsCompilation: yes
+biocViews: Software, StatisticalMethod, Classification, GenomeWideAssociation, SNP, Genetics, Clustering, MultipleComparison, Preprocessing
+SystemRequirements: GNU make
