--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Dongjun Chung <dongjun.chung@gmail.com>
 Description: This package provides functions for fitting graph-GPA, a statistical framework to prioritize GWAS results by integrating pleiotropy. 
 License: GPL (>= 2)
 URL: https://github.com/dongjunchung/GGPA/
-Depends: R (>= 4.0.0), methods, graphics, GGally, network, sna, scales
+Depends: R (>= 4.0.0), stats, methods, graphics, GGally, network, sna, scales
 Imports: Rcpp (>= 0.11.3)
 LinkingTo: Rcpp, RcppArmadillo
 RcppModules: cGGPAmodule
