--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ Imports: Rcpp (>= 0.11.3)
 LinkingTo: Rcpp, RcppArmadillo
 RcppModules: cGGPAmodule
 NeedsCompilation: yes
-biocViews: Software, StatisticalMethod, Classification, GenomeWideAssociation, SNP, Genetics, Clustering, MultipleComparison, Preprocessing
+biocViews: Software, StatisticalMethod, Classification, GenomeWideAssociation, SNP, Genetics, Clustering, MultipleComparison, Preprocessing, GeneExpression, DifferentialExpression
 SystemRequirements: GNU make
